<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.exampleproject.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv1"
        android:layout_alignLeft="@+id/tv1"
        android:layout_marginBottom="64dp"
        android:text="@string/sehiradi" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="170dp"
        android:text="@string/sehir_id" />

    <TextView
        android:id="@+id/sehir_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_marginLeft="62dp"
        android:text="" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="36dp"
        android:text="@string/gokyuzu" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="36dp"
        android:text="@string/iconid" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_centerVertical="true"
        android:text="@string/hava_durum" />

    <TextView
        android:id="@+id/hava_durumu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/sehir_id"
        android:text="" />

    <TextView
        android:id="@+id/gokyuzu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/hava_durumu"
        android:text="" />

    <TextView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/gokyuzu"
        android:text="" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/icon"
        android:layout_marginTop="26dp"
        android:text="@string/buton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_marginBottom="30dp"
        android:text="@string/baslik"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</RelativeLayout>
